[project]
name = "aws-trustline"
version = "0.1.0"
description = "Map and audit third-party trust relationships in your AWS account"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Victor Grenu", email = "victor@zoph.io" },
]
keywords = ["aws", "security", "iam", "trust-policy", "cloud-security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    "boto3>=1.28.0",
    "botocore>=1.31.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "rich>=13.3.0",
]

[project.urls]
Homepage = "https://github.com/zoph-io/aws-trustline"
Repository = "https://github.com/zoph-io/aws-trustline"
Issues = "https://github.com/zoph-io/aws-trustline/issues"

[project.scripts]
trustline = "trustline:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
